Fix main margin on mobile mode

--- a/src/style.less
+++ b/src/style.less
@@ -109,6 +109,15 @@ body {
         }
     }
 
+    #ls-main {
+        &.responsive-margin-top {
+            // bootstrap medium
+            @media (min-width: 768px) {
+                margin-top: 3em;
+            }
+        }
+    }
+
     // Mutliple columns in text-only mode
     .ls-text-columns {
         column-count: 1;
